organizando diretórios css, inserindo pasta dist dentro de public, estruturando style.scss

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,42 @@
   <head>
     <meta charset="UTF-8">
     <title>R7 FrontEnd Test</title>
-    <link rel="stylesheet" href="stylesheets/style.css" media="all">
+    <link rel="stylesheet" href="./dist/css/style.css" media="all">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- let's code :D -->
-
-    <script src="javascripts/main.js"></script>
+    <main class="page-ranking">
+      <div class="container">
+        <div class="container-component">
+          <img src="./images/a-fazenda-logo.png" alt="Logo A Fazenda Record">
+          <div class="box-title">
+            <h1>Ranking <span class="hide">A Fazenda</span></h1>
+          </div>
+        </div>
+        <section class="ranking-section">
+          <div class="ranking-component">
+            <div class="foto-participante">
+              <img src="" alt="">
+            </div>
+            <div class="info-participante">
+              <p class="nome">nome</p>
+              <p class="descricao">descricao</p>
+            </div>
+            <div class="tooltip">
+              <div class="container-tooltip">
+                <p class="tipo">gostam</p>
+                <p class="porcentagem">37%</p>
+              </div>
+              <div class="container-tooltip">
+                <p class="tipo">gostam</p>
+                <p class="porcentagem">37%</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    <script src="../../dist/js/all.js"></script>
 </html>
