adicionando pasta services, modificando gulp para dentro da pasta public, alterando o index e iniciando o ranking.scss

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <main class="page-ranking">
       <div class="container">
         <div class="container-component">
-          <img src="./images/a-fazenda-logo.png" alt="Logo A Fazenda Record">
+          <img src="./images/a-fazenda-logo.png" alt="Logo A Fazenda Record" class="logo">
           <div class="box-title">
             <h1>Ranking <span class="hide">A Fazenda</span></h1>
           </div>
